# digger

./: .gitignore  Cargo.toml  LICENSE  README.md  cargo.toml  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
app/: biome.json  components.json  index.html  package.json  vite.config.ts
app/src/: app.tsx  main.tsx
app/src/components/: debounced-input.tsx  digger-icon.tsx  digger-plain.tsx  error-alert.tsx  file-icons.tsx  match-nav.tsx  page.tsx  preview.tsx  search-form.tsx  sidebar.tsx  stats-toast.tsx  theme-toggle.tsx  version.tsx
app/src/components/data-table/: columns.tsx  context-popover.tsx  data-table-column-vis.tsx  data-table-faceted-filter.tsx  data-table-header.tsx  data-table-pagination.tsx  file-table.tsx  path-popover.tsx  row-context-menu.tsx
app/src/components/form/: case-sensitive-field.tsx  extension-field.tsx  needle-fields.tsx  path-field.tsx
app/src/components/ui/: command.tsx  context-menu.tsx  dialog.tsx  scroll-area.tsx  select.tsx  switch.tsx
app/src/lib/: extensions.ts  highlighter.ts
app/src/lib/hooks/: use-files.ts  use-os.ts  use-preview.ts
crates/digger-core/: Cargo.toml
crates/digger-core/src/: lib.rs
crates/digger-core/src/extractor/: docx.rs  mod.rs  pdf.rs
crates/digger-core/src/matcher/: context.rs  mod.rs  needle.rs
crates/digger-core/src/worker/: matched_file.rs  mod.rs
crates/digger-tauri/: Cargo.toml  tauri.conf.json
crates/digger-tauri/icons/: icon.icns
crates/digger-tauri/src/: error.rs  logging.rs  main.rs  window.rs
crates/digger-tauri/src/args/: mod.rs
crates/digger-tauri/src/commands/: fs.rs  mod.rs  search.rs
crates/digger-tauri/src/extractors/: pdf.rs
crates/digger-tauri/src/worker/: mod.rs
src/: app.tsx  atoms.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: logging.rs  main.rs  utils.rs
src-tauri/src/args/: mod.rs  needle.rs
src-tauri/src/commands/: fs.rs  search.rs
src-tauri/src/extractors/: mod.rs
src-tauri/src/matcher/: context.rs  mod.rs
src-tauri/src/readers/: docx.rs  mod.rs  pdf.rs
src-tauri/src/worker/: matched_file.rs  mod.rs
src/components/: debounced-input.tsx  digger-icon.tsx  drag-region.tsx  file-icons.tsx  form.tsx  global-context.tsx  match-nav.tsx  page.tsx  preview.tsx  scroller.tsx  search-form.tsx  sidebar.tsx  version.tsx
src/components/data-table/: columns.tsx  context-hover-card.tsx  context-popover.tsx  data-table-header.tsx  file-table.tsx  path-hover-card.tsx  path-popover.tsx  row-context-menu.tsx  row-context.tsx
src/components/form/: case-sensitive-field.tsx  extension-field.tsx  needle-fields.tsx  path-field.tsx
src/components/ui/: resizable.tsx  sonner.tsx
src/lib/: consts.ts  extensions.ts  highlighter.ts  utils.ts
src/lib/hooks/: use-files.ts  use-files.tsx  use-preview.ts
