[package]
name = "digger-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.75"
jwalk = "0.8.1"
rayon = "1.7.0"
zip = "0.6.6"
quick-xml = "0.30.0"
aho-corasick = "1.1.1"
time = { version = "0.3.28", features = [
    "serde",
    "parsing",
    "macros",
    "formatting",
] }
pdf-extract = "0.7.2"
tempfile = "3.9.0"
line-numbers = "0.3.0"
ignore = "0.4.22"
crossbeam-channel = "0.5.12"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
num_cpus = "1.16.0"
