[package]
name = "digger-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
zip = "0.6.6"
quick-xml = "0.30.0"
aho-corasick = "1.1.1"
time = { version = "0.3.28", features = [
    "serde",
    "parsing",
    "macros",
    "formatting",
] }
pdf-extract = "0.7.2"
line-numbers = "0.3.0"
num_cpus = "1.16.0"
