[package]
name = "digger-tauri"
version = "0.0.1"
authors = ["wt-7"]
license = "MIT"
repository = "github.com/wt-7/digger"
edition = "2021"
publish = false


[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
digger-core.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tauri = { version = "1.4", features = [
    "os-all",
    "window-unmaximize",
    "window-maximize",
    "window-start-dragging",
    "dialog-open",
] }
ignore = "0.4.22"
crossbeam-channel = "0.5.12"
tracing-subscriber = "0.3.18"
num_cpus = "1.16.0"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
